syntax = "proto3";

package cn . krossframework. proto;

option optimize_for = SPEED;
option java_outer_classname = "Chat";

message ChatMessage {
  int32 cmdType  = 1;
  string msg     = 2;
  int32 emoticon = 3;
  bytes stream   = 4;
}

message ChatMessageResult {
  string from             = 1;
  bool toAll              = 2;
  repeated string to      = 3;
  ChatMessage chatMessage = 4;
}